feat: edit packname

--- a/0512Local/src/main/res/values/strings.xml
+++ b/0512Local/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="str">\n&#160;&#160;</string>
     <string name="loading">Loading...</string>
-    <string name="falilname">Gmail</string>
+    <string name="falilname">Contacts Provider in Android</string>
     <string name="scwc_ce">asd.acca.cse</string>
     <string name="scwc_sasd">vrasde.wwad</string>
     <string name="scwc_ced">vdar.redasdre.rhnere</string>
